@@ -1,3 +1,4 @@
+ - Added access to crs data from python for uBLAS and MTL4 backend
 0.9.1 [2009-02-17]
  - Check Rectangle and Box for non-zero dimensions
  - ODE solvers now solve the dual problem
